--- a/awal.html
+++ b/awal.html
@@ -19,12 +19,12 @@
     <div id="preloader"><div class="spinner-brand"></div></div>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-success shadow-sm sticky-top animate__animated animate__fadeInDown">
+    <nav class="navbar navbar-expand-lg sticky-top animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="awal.html">
                 <i class="fa-solid fa-leaf me-2"></i> Nutri Herbal
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,35 +52,33 @@
     </nav>
 
     <!-- Hero Section dengan Slider -->
-    <header class="hero-section d-flex align-items-center text-white">
-        <div class="container text-center">
-            <section class="hero-slider position-relative">
-                <div class="slide active" style="background-image: url('images/air-jahe.jpeg');"></div>
-                <div class="slide" style="background-image: url('images/tensi.jpg');"></div>
-                <div class="slide" style="background-image: url('images/herbal.jpg');"></div>
-                <div class="slide" style="background-image: url('images/sepiring\ sayur.jpg');"></div>
-                <div class="overlay">
-                    <div class="animate__animated animate__backInDown">
-                        <h1 class="fw-bold mb-2" style="font-size:2.3rem;">
-                            <span id="typewriter"></span><span class="typing-cursor">|</span>
-                        </h1>
-                    </div>
-                    <div class="animate__animated animate__backInUp">
-                        <p class="mb-3" style="font-size:1.2rem;"><strong><span id="typewriter-subtitle"></span></strong>
-                        </p>
-                        <a href="vid.html" class="cta-button" id="btn-jelajahi-video"><i class="fa-solid fa-video"></i>
-                            Jelajahi Video</a>
-                        <a href="index.html" class="cta-button" id="btn-jelajahi-informasi"><i
-                                class="fa-solid fa-circle-info"></i> Jelajahi Informasi</a>
-                    </div>
-                    <div class="slider-dots"></div>
+    <header class="hero-section text-white">
+        <section class="hero-slider position-relative">
+            <div class="slide active" style="background-image: url('images/air-jahe.jpeg');"></div>
+            <div class="slide" style="background-image: url('images/tensi.jpg');"></div>
+            <div class="slide" style="background-image: url('images/herbal.jpg');"></div>
+            <div class="slide" style="background-image: url('images/sepiring\ sayur.jpg');"></div>
+            <div class="overlay">
+                <div class="hero-text-container">
+                    <h1 class="fw-bold mb-2" style="font-size:2.3rem;">
+                        <span id="typewriter"></span><span class="typing-cursor"></span>
+                    </h1>
                 </div>
-            </section>
-        </div>
+                <div class="hero-subtitle-container">
+                    <p class="mb-3" style="font-size:1.2rem;"><strong><span id="typewriter-subtitle"></span></strong>
+                    </p>
+                    <a href="vid.html" class="cta-button" id="btn-jelajahi-video"><i class="fa-solid fa-video"></i>
+                        Jelajahi Video</a>
+                    <a href="index.html" class="cta-button" id="btn-jelajahi-informasi"><i
+                            class="fa-solid fa-circle-info"></i> Jelajahi Informasi</a>
+                </div>
+                <div class="slider-dots"></div>
+            </div>
+        </section>
     </header>
 
     <!-- Fitur Utama Website -->
-    <section class="container fitur-section animate__animated animate__fadeInUp">
+    <section class="container fitur-section reveal">
         <!-- Widget Tips Sehat (Opsi 5) -->
         <div id="dailyHealthTip"></div>
 
@@ -89,7 +87,7 @@
                 <h3 class="fw-bold mb-4 text-success"><i class="fa-solid fa-star"></i> Fitur Utama Nutri Herbal</h3>
             </div>
         </div>
-        <div class="row justify-content-center g-4">
+        <div class="row justify-content-center g-3">
             <!-- Kalkulator Natrium -->
             <div class="col-12 col-md-6 col-lg-3">
                 <a href="index.html" class="text-decoration-none">
@@ -134,8 +132,7 @@
     </section>
 
     <!-- Tentang Kami Section -->
-    <section class="container tentang-kami-section animate__animated animate__fadeInUp">
-    <section id="tentang-kami" class="container tentang-kami-section animate__animated animate__fadeInUp">
+    <section id="tentang-kami" class="container tentang-kami-section reveal">
         <div class="row justify-content-center mb-4">
             <div class="col-md-8 text-center">
                 <h3 class="fw-bold mb-2 text-success" style="font-size: 1.8rem;"><i class="fa-solid fa-info-circle"></i>
@@ -271,7 +268,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="container faq-section animate__animated animate__fadeInUp mb-5">
+    <section class="container faq-section reveal mb-5">
         <div class="row justify-content-center mb-4">
             <div class="col-md-8 text-center">
                 <h3 class="fw-bold mb-2 text-success"><i class="fa-solid fa-circle-question"></i> Pertanyaan Umum</h3>
@@ -311,7 +308,7 @@
     </section>
     
     <!-- Instansi Terkait -->
-    <main class="container institusi-section animate__animated animate__fadeInUp">
+    <main class="container institusi-section reveal">
         <div class="institusi-title"><i class="fa-solid fa-building-columns"></i> Instansi Terkait</div>
         <div class="institusi-logos">
             <img class="institusi-logo"
@@ -339,26 +336,48 @@
         </a>
     </div>
 
-    <!-- Scroll Top Button (Opsi 3) -->
-    <button id="scrollTopBtn" class="scroll-top-btn" title="Kembali ke Atas">
+    <!-- Back to Top Button -->
+    <div id="backToTop" title="Kembali ke Atas">
         <i class="fa-solid fa-arrow-up"></i>
-    </button>
+    </div>
 
     <!-- Footer -->
-    <footer class="main-footer py-4 mt-5 animate__animated animate__fadeInUp">
+    <footer class="main-footer py-5 mt-5 reveal" style="background: #1b5e20; color: white;">
         <div class="container">
-            <div class="row align-items-center g-3">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0 fw-bold">&copy; 2025 Nutri Herbal</p>
-                    <small class="opacity-75">Sehat mulai dari diri sendiri.</small>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <div class="social-links">
-                        <a href="mailto:info@nutriherbal.com" class="text-decoration-none me-3"><i class="fa-solid fa-envelope me-1"></i> Hubungi Kami</a>
-                        <a href="https://instagram.com" target="_blank" class="me-3"><i class="fa-brands fa-instagram fa-lg"></i></a>
-                        <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <h4 class="text-white mb-3">Nutri Herbal PLus+</h4>
+                    <p class="small opacity-75">Aplikasi edukasi kesehatan untuk pencegahan hipertensi melalui pola makan dan gaya hidup sehat berbasis herbal alami.</p>
+                    <div class="social-links mt-3">
+                        <a href="#" class="text-white me-3"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                        <a href="#" class="text-white"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Navigasi</h5>
+                    <ul class="list-unstyled small opacity-75">
+                        <li class="mb-2"><a href="awal.html" class="text-white text-decoration-none">Beranda</a></li>
+                        <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Informasi</a></li>
+                        <li class="mb-2"><a href="vid.html" class="text-white text-decoration-none">Video</a></li>
+                        <li class="mb-2"><a href="grafik.html" class="text-white text-decoration-none">Grafik</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-white mb-3">Kontak</h5>
+                    <ul class="list-unstyled small opacity-75">
+                        <li class="mb-2"><i class="fa-solid fa-envelope me-2"></i> info@nutriherbal.com</li>
+                        <li class="mb-2"><i class="fa-solid fa-location-dot me-2"></i> Yogyakarta, Indonesia</li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-white mb-3">Slogan</h5>
+                    <p class="small italic opacity-75">"Cegah Hipertensi dengan Gaya Hidup Sehat dan Herbal Alami."</p>
+                </div>
+            </div>
+            <hr class="my-4 opacity-25">
+            <div class="text-center">
+                <p class="mb-0 small opacity-75">&copy; 2026 Nutri Herbal PLus+. Seluruh Hak Cipta Dilindungi.</p>
             </div>
         </div>
     </footer>
