--- a/grafik.html
+++ b/grafik.html
@@ -19,12 +19,12 @@
     <div id="preloader"><div class="spinner-brand"></div></div>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-success shadow-sm sticky-top animate__animated animate__fadeInDown">
+    <nav class="navbar navbar-expand-lg sticky-top animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="awal.html">
                 <i class="fa-solid fa-leaf me-2"></i> Nutri Herbal
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -87,7 +87,7 @@
         </div>
 
         <!-- Ringkasan Statistik (Key Metrics) -->
-        <div class="row g-4 mb-5 animate__animated animate__fadeInUp">
+        <div class="row g-4 mb-5 reveal">
             <div class="col-md-4">
                 <div class="stat-card bg-gradient-primary text-white p-4 rounded-4 shadow-sm h-100">
                     <div class="d-flex align-items-center mb-3">
@@ -130,7 +130,7 @@
             </div>
         </div>
 
-        <div class="card animate__animated animate__fadeInUp">
+        <div class="card reveal">
             <div class="card-header">
                 <i class="fa-solid fa-table-list"></i> grafik jumlah penderita hipertensi di wilayah kabupaten sleman
             </div>
@@ -144,7 +144,7 @@
             </div>
         </div>
 
-        <div class="card animate__animated animate__fadeInUp">
+        <div class="card reveal">
             <div class="card-header">
                 <i class="fa-solid fa-table-list"></i> jumlah penderita hipertensi wilayah puskesmas sleman
             </div>
@@ -158,7 +158,7 @@
         </div>
 
         <!-- Tabel Data Rinci (Accordion) -->
-        <div class="accordion mb-5 animate__animated animate__fadeInUp" id="accordionData">
+        <div class="accordion mb-5 reveal" id="accordionData">
             <div class="accordion-item border-0 shadow-sm rounded-4 overflow-hidden">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed fw-bold text-success bg-white" type="button"
@@ -226,7 +226,7 @@
         </div>
 
         <!-- CTA Section -->
-        <div class="cta-section text-center mt-5 p-5 rounded-4 bg-white shadow-sm animate__animated animate__fadeInUp">
+        <div class="cta-section text-center mt-5 p-5 rounded-4 bg-white shadow-sm reveal">
             <h3 class="fw-bold text-success mb-3">Bagaimana dengan Tekanan Darah Anda?</h3>
             <p class="text-muted mb-4">Jangan tunggu sampai terlambat. Pencegahan dini adalah kunci hidup sehat.</p>
             <a href="index.html" class="btn btn-success btn-lg rounded-pill px-5 shadow">
@@ -259,11 +259,6 @@
         </a>
     </div>
 
-    <!-- Scroll Top Button (Opsi 3) -->
-    <button id="scrollTopBtn" class="scroll-top-btn" title="Kembali ke Atas">
-        <i class="fa-solid fa-arrow-up"></i>
-    </button>
-
     <!-- WhatsApp Floating Button -->
     <div class="whatsapp-float">
         <a href="https://wa.me/6281572616074" target="_blank" title="Chat WhatsApp">
@@ -271,23 +266,48 @@
         </a>
     </div>
 
+    <!-- Back to Top Button -->
+    <div id="backToTop" title="Kembali ke Atas">
+        <i class="fa-solid fa-arrow-up"></i>
+    </div>
+
     <!-- Footer -->
-    <footer class="main-footer py-4 mt-5 animate__animated animate__fadeInUp">
+    <footer class="main-footer py-5 mt-5 reveal" style="background: #1b5e20; color: white;">
         <div class="container">
-            <div class="row align-items-center g-3">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0 fw-bold">&copy; 2025 Nutri Herbal</p>
-                    <small class="opacity-75">Sehat mulai dari diri sendiri.</small>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <div class="social-links">
-                        <a href="mailto:info@nutriherbal.com" class="text-decoration-none me-3"><i
-                                class="fa-solid fa-envelope me-1"></i> Hubungi Kami</a>
-                        <a href="https://instagram.com" target="_blank" class="me-3"><i
-                                class="fa-brands fa-instagram fa-lg"></i></a>
-                        <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <h4 class="text-white mb-3">Nutri Herbal PLus+</h4>
+                    <p class="small opacity-75">Aplikasi edukasi kesehatan untuk pencegahan hipertensi melalui pola makan dan gaya hidup sehat berbasis herbal alami.</p>
+                    <div class="social-links mt-3">
+                        <a href="#" class="text-white me-3"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                        <a href="#" class="text-white"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Navigasi</h5>
+                    <ul class="list-unstyled small opacity-75">
+                        <li class="mb-2"><a href="awal.html" class="text-white text-decoration-none">Beranda</a></li>
+                        <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Informasi</a></li>
+                        <li class="mb-2"><a href="vid.html" class="text-white text-decoration-none">Video</a></li>
+                        <li class="mb-2"><a href="grafik.html" class="text-white text-decoration-none">Grafik</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-white mb-3">Kontak</h5>
+                    <ul class="list-unstyled small opacity-75">
+                        <li class="mb-2"><i class="fa-solid fa-envelope me-2"></i> info@nutriherbal.com</li>
+                        <li class="mb-2"><i class="fa-solid fa-location-dot me-2"></i> Yogyakarta, Indonesia</li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-white mb-3">Slogan</h5>
+                    <p class="small italic opacity-75">"Cegah Hipertensi dengan Gaya Hidup Sehat dan Herbal Alami."</p>
+                </div>
+            </div>
+            <hr class="my-4 opacity-25">
+            <div class="text-center">
+                <p class="mb-0 small opacity-75">&copy; 2026 Nutri Herbal PLus+. Seluruh Hak Cipta Dilindungi.</p>
             </div>
         </div>
     </footer>
