--- a/vid.html
+++ b/vid.html
@@ -18,12 +18,12 @@
 
     <!-- Navbar -->
     <nav
-        class="navbar navbar-expand-lg bg-success shadow-sm sticky-top animate__animated animate__fadeInDown">
+        class="navbar navbar-expand-lg sticky-top animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="awal.html">
                 <i class="fa-solid fa-leaf me-2"></i> Nutri Herbal
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -62,7 +62,7 @@
         <!-- Widget Tips Sehat (Opsi 5) -->
         <div id="dailyHealthTip"></div>
 
-        <section class="hero d-flex justify-content-between align-items-start gap-3 mb-4">
+        <section class="hero d-flex justify-content-between align-items-start gap-3 mb-4 reveal">
             <div>
                 <h1><i class="fa-solid fa-leaf me-2"></i> Video Edukasi</h1>
                 <p>Video singkat & mudah dipahami tentang hipertensi, pola makan, dan gaya hidup sehat.</p>
@@ -75,13 +75,13 @@
             </div>
         </section>
 
-        <div class="row align-items-center mb-3 g-3">
+        <div class="row align-items-center mb-3 g-3 reveal">
             <div class="col-md-8">
                 <input id="videoSearch" class="form-control form-control-lg" placeholder="Cari video (judul / tag)..."
                     aria-label="Cari video">
             </div>
             <div class="col-md-4 text-md-end">
-                <div id="chipsWrap" class="d-inline-flex gap-2 flex-wrap"></div>
+                <div id="chipsWrap" class="d-flex gap-2 flex-nowrap"></div>
             </div>
         </div>
         
@@ -92,7 +92,7 @@
             <p class="text-muted">Coba kata kunci lain atau reset filter.</p>
         </div>
 
-        <div id="videosGrid" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+        <div id="videosGrid" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 reveal">
 
             <!-- Video items: data-video-id, data-title, data-tags (comma) -->
             <div class="col" data-title="APA YA HIPERTENSI ITU?" data-tags="hipertensi,pengetahuan">
@@ -258,26 +258,48 @@
         </a>
     </div>
 
-    <!-- Scroll Top Button (Opsi 3) -->
-    <button id="scrollTopBtn" class="scroll-top-btn" title="Kembali ke Atas">
+    <!-- Back to Top Button -->
+    <div id="backToTop" title="Kembali ke Atas">
         <i class="fa-solid fa-arrow-up"></i>
-    </button>
+    </div>
 
     <!-- Footer -->
-    <footer class="main-footer py-4 mt-5 animate__animated animate__fadeInUp">
+    <footer class="main-footer py-5 mt-5 reveal" style="background: #1b5e20; color: white;">
         <div class="container">
-            <div class="row align-items-center g-3">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0 fw-bold">&copy; 2025 Nutri Herbal</p>
-                    <small class="opacity-75">Sehat mulai dari diri sendiri.</small>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <div class="social-links">
-                        <a href="mailto:info@nutriherbal.com" class="text-decoration-none me-3"><i class="fa-solid fa-envelope me-1"></i> Hubungi Kami</a>
-                        <a href="https://instagram.com" target="_blank" class="me-3"><i class="fa-brands fa-instagram fa-lg"></i></a>
-                        <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <h4 class="text-white mb-3">Nutri Herbal PLus+</h4>
+                    <p class="small opacity-75">Aplikasi edukasi kesehatan untuk pencegahan hipertensi melalui pola makan dan gaya hidup sehat berbasis herbal alami.</p>
+                    <div class="social-links mt-3">
+                        <a href="#" class="text-white me-3"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                        <a href="#" class="text-white"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Navigasi</h5>
+                    <ul class="list-unstyled small opacity-75">
+                        <li class="mb-2"><a href="awal.html" class="text-white text-decoration-none">Beranda</a></li>
+                        <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Informasi</a></li>
+                        <li class="mb-2"><a href="vid.html" class="text-white text-decoration-none">Video</a></li>
+                        <li class="mb-2"><a href="grafik.html" class="text-white text-decoration-none">Grafik</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-white mb-3">Kontak</h5>
+                    <ul class="list-unstyled small opacity-75">
+                        <li class="mb-2"><i class="fa-solid fa-envelope me-2"></i> info@nutriherbal.com</li>
+                        <li class="mb-2"><i class="fa-solid fa-location-dot me-2"></i> Yogyakarta, Indonesia</li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-white mb-3">Slogan</h5>
+                    <p class="small italic opacity-75">"Cegah Hipertensi dengan Gaya Hidup Sehat dan Herbal Alami."</p>
+                </div>
+            </div>
+            <hr class="my-4 opacity-25">
+            <div class="text-center">
+                <p class="mb-0 small opacity-75">&copy; 2026 Nutri Herbal PLus+. Seluruh Hak Cipta Dilindungi.</p>
             </div>
         </div>
     </footer>
